--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
    <head>
         <title>encyclopedi</title>
-        <link rea sitl="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="style.css"/>
      </head>
 
    <body>
